// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Course component with prerequisites 1`] = `
<div
  className="Course"
>
  <a
    className="Course__name"
    href="Link to course"
  >
    <h3>
      Name of course
    </h3>
  </a>
  <p
    className="Course__school"
  >
    School
  </p>
  <p
    className="Course__duration"
  >
    Duration
     weeks
  </p>
  <p
    className="Course__effort"
  >
    Effort
     hours/week
  </p>
  <p
    className="Course__frequency"
  >
    Frequency
  </p>
  <div
    className="Course__prerequisites"
  >
    <p>
      Prerequisite 1
      Prerequisite 2
    </p>
  </div>
</div>
`;

exports[`Render Course component without prerequisites 1`] = `
<div
  className="Course"
>
  <a
    className="Course__name"
    href="Link to course"
  >
    <h3>
      Name of course
    </h3>
  </a>
  <p
    className="Course__school"
  >
    School
  </p>
  <p
    className="Course__duration"
  >
    Duration
     weeks
  </p>
  <p
    className="Course__effort"
  >
    Effort
     hours/week
  </p>
  <p
    className="Course__frequency"
  >
    Frequency
  </p>
</div>
`;
